name:                castle
version:             0.1.0.0
synopsis:            A GF reimplementation of Theo Lutz' stochastic texts.
-- description:
license:             GPL-3
license-file:        LICENSE
author:              Emil Skoeldberg
maintainer:          emil@skoeldberg.net
-- copyright:
category:            Language
build-type:          Custom
data-files:          gf/Castle.pgf
extra-source-files:  README.org
cabal-version:       >=1.10

executable castle
  main-is:             Main.hs
  other-modules:       Paths_castle
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9,
                       random,
                       gf
  -- hs-source-dirs:
  default-language:    Haskell2010
